--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --recursive"
   },
   "dependencies": {
+    "angular": "^1.8.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
